# memory

./: CMakeLists.txt  org.tizen.memory.xml
edc/: CMakeLists.txt  CMakeLists.txt~  button.edc  button.edj  game_grid.edc  game_grid.edj  highscore_menu.edc  main_menu.edc  memory_layouts.edc  settings.edc
inc/: game_grid.h  game_types.h  highscores.h  main.h  main_menu.h  memoryApp.h  memoryFrame.h  settings.h
packaging/: org.tizen.memory.spec  org.tizen.memory.spec~  org.tizen.shortcuts.spec~
res/: results.eet
src/: game_grid.c  highscores.c  main.c  settings.c
