CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(memory C)

# FIND ALL SOURCE IN A SOURCE DIRECTORY
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src SRCS)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/edc)


INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	bundle
	appcore-efl
	evas
	elementary
	ecore
	eina
	ecore-x
	efl-assist
)

SET(PREFIX ${CMAKE_SOURCE_DIR})
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(IMAGES_DIR "${RESDIR}/images/")
SET(ICON_DIR "${RESDIR}/icon/")

ADD_DEFINITIONS(
		-DAPP_PREFIX=\"${CMAKE_INSTALL_PREFIX}\"
		-DPROJECT_NAME=\"${PROJECT_NAME}\"
)

SET(SLP_LD_PATH_FLAGS "")
SET(SLP_DEBUG_FLAGS "-g")
SET(SLP_OPT_FLAGS "-O0")
SET(SLP_COMPILER_FLAGS "-Wall -Wunused")
SET(SLP_LINKER_FLAGS "")

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS}")
SET(CMAKE_CXX_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} ${SLP_LD_PATH_FLAGS} ${SLP_LD_FLAGS} ${SLP_LINKER_FLAGS})

ADD_SUBDIRECTORY(edc)

# Install 
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(DIRECTORY ${RESDIR}/icons DESTINATION res)
INSTALL(DIRECTORY ${RESDIR}/images DESTINATION res)
# Install Manifest File
INSTALL(FILES org.tizen.memory.xml DESTINATION /opt/share/packages)

# End of a file
